force-app/main/default/objects/Contact/fields/forcebrain__CurrentlyWorking__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__CurrentlyWorking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will automatically get checked upon creating a work shift that is not in the past. Upon unchecking this check box, the user will no longer show up on the Work Shift Calendar. Conversely, if a work shift goes into the past, then the “Currently Working” check box will become unchecked.</description>
    <inlineHelpText>This checkbox will get auto-checked upon creating a work shift that is not in the past. Upon unchecking, the user will no longer show up on the Work Shift Calendar. If a work shift is in the past, then Currently Working will become unchecked.</inlineHelpText>
    <label>Currently Working</label>
    <type>Checkbox</type>
</CustomField>