force-app/main/default/objects/Contact/fields/forcebrain__Geocode_Success__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Geocode_Success__c</fullName>
    <formula>IF(forcebrain__Longitude__c =0.0 &amp;&amp; forcebrain__Latitude__c=0.0,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;geocodeNotFound&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;gecodeFound&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geocode Success?</label>
    <type>Text</type>
</CustomField>