force-app/main/default/objects/Contact/fields/forcebrain__IsPersonalAccount__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__IsPersonalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, SUMO Scheduler will make this a Personal Account, which is typically necessary for Customers and Patients.</inlineHelpText>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>