force-app/main/default/objects/Contact/fields/forcebrain__IsProvider__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__IsProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, SUMO Scheduler will associate this Provider with the &quot;Provider&quot; account. This is typically required by SUMO Scheduler for all Providers.</inlineHelpText>
    <label>Is Provider</label>
    <type>Checkbox</type>
</CustomField>