force-app/main/default/objects/Contact/fields/forcebrain__Latitude__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>