force-app/main/default/objects/Contact/fields/forcebrain__Longitude__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>