force-app/main/default/objects/Contact/fields/forcebrain__Schedule_Now_URL__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Schedule_Now_URL__c</fullName>
    <formula>HYPERLINK( forcebrain__EncryptURL__c , &quot;Schedule Now&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Now URL</label>
    <type>Text</type>
</CustomField>