force-app/main/default/objects/Contact/fields/forcebrain__Specialty__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specialty 1</fullName>
            </value>
            <value>
                <fullName>Specialty 2</fullName>
            </value>
            <value>
                <fullName>Specialty 3</fullName>
            </value>
            <value>
                <fullName>Specialty 4</fullName>
            </value>
            <value>
                <fullName>Specialty 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>