force-app/main/default/objects/Contact/fields/forcebrain__Text_opt_out__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Text_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SUMO will no longer send text message appointment reminders to this contacts mobile phone if you check this box.</inlineHelpText>
    <label>Text Reminder Opt Out</label>
    <type>Checkbox</type>
</CustomField>