force-app/main/default/objects/Contact/fields/forcebrain__User__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Each Provider using SUMO Scheduler requires a license, and this field is how you associate the Providers contact record with their user license.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>