force-app/main/default/objects/Contact/fields/forcebrain__UserId__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__UserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>UserId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>