force-app/main/default/objects/Contact/fields/forcebrain__Voice_opt_out__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Voice_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SUMO will no longer make automated appointment reminder phone calls to this contacts mobile phone if you check this box.</inlineHelpText>
    <label>Phone Reminder Opt Out</label>
    <type>Checkbox</type>
</CustomField>