force-app/main/default/objects/Contact/fields/FSP_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>FSP_Sales_Rep__c</fullName>
    <label>FSP Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>