force-app/main/default/objects/Contact/fields/FSP_Sales_Rep_LY__c.field-meta.xml
<CustomField>
    <fullName>FSP_Sales_Rep_LY__c</fullName>
    <label>FSP Sales Rep LY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>