force-app/main/default/objects/Contact/fields/Full_Link__c.field-meta.xml
<CustomField>
    <fullName>Full_Link__c</fullName>
    <formula>IF(
$User.Salesforce_ID__c &lt;&gt; &quot;0050W000006qj5vQAA&quot;,
AM_link__c +&quot;&quot;+ SUMO_String__c,
&quot;CEP: https://replica-fivestarprofessional-experience.cs218.force.com/s/onlinescheduler?processId=a5F0W000001iS7CUAU&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Id +&quot; &quot;+br()+br()+
&quot;v5: &quot;+AM_link__c +&quot;&quot; + SUMO_String__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Certification Link</label>
    <type>Text</type>
</CustomField>