force-app/main/default/objects/Contact/fields/Gift_Programs__c.field-meta.xml
<CustomField>
    <fullName>Gift_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Interest Field</description>
    <label>Gift Programs</label>
    <type>Checkbox</type>
</CustomField>