force-app/main/default/objects/Contact/fields/Heat_Index_Date__c.field-meta.xml
<CustomField>
    <fullName>Heat_Index_Date__c</fullName>
    <label>Heat Index Date</label>
    <type>Date</type>
</CustomField>