force-app/main/default/objects/Contact/fields/Heat_Index_Response__c.field-meta.xml
<CustomField>
    <fullName>Heat_Index_Response__c</fullName>
    <label>Heat Index?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>