force-app/main/default/objects/Contact/fields/Hidden_asst_email__c.field-meta.xml
<CustomField>
    <fullName>Hidden_asst_email__c</fullName>
    <label>Hidden asst email</label>
    <type>Email</type>
</CustomField>