force-app/main/default/objects/Contact/fields/Hidden_asst_phone__c.field-meta.xml
<CustomField>
    <fullName>Hidden_asst_phone__c</fullName>
    <label>Hidden asst phone</label>
    <type>Phone</type>
</CustomField>