force-app/main/default/objects/Contact/fields/Hidden_email_2__c.field-meta.xml
<CustomField>
    <fullName>Hidden_email_2__c</fullName>
    <label>Hidden email 2</label>
    <type>Email</type>
</CustomField>