force-app/main/default/objects/Contact/fields/Hidden_email__c.field-meta.xml
<CustomField>
    <fullName>Hidden_email__c</fullName>
    <label>Hidden email</label>
    <type>Email</type>
</CustomField>