force-app/main/default/objects/Contact/fields/Hidden_Extension__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Extension__c</fullName>
    <label>Hidden Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>