force-app/main/default/objects/Contact/fields/Hidden_fax__c.field-meta.xml
<CustomField>
    <fullName>Hidden_fax__c</fullName>
    <label>Hidden fax</label>
    <type>Phone</type>
</CustomField>