force-app/main/default/objects/Contact/fields/Hidden_mobile__c.field-meta.xml
<CustomField>
    <fullName>Hidden_mobile__c</fullName>
    <label>Hidden mobile</label>
    <type>Phone</type>
</CustomField>