force-app/main/default/objects/Contact/fields/Hidden_phone__c.field-meta.xml
<CustomField>
    <fullName>Hidden_phone__c</fullName>
    <label>Hidden phone</label>
    <type>Phone</type>
</CustomField>