force-app/main/default/objects/Contact/fields/Insightistics_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Insightistics_Survey_URL__c</fullName>
    <label>Insightistics Survey URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>