force-app/main/default/objects/Contact/fields/IP_Specialty__c.field-meta.xml
<CustomField>
    <fullName>IP_Specialty__c</fullName>
    <label>IP Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified Public Accountant</fullName>
            </value>
            <value>
                <fullName>Estate Planning Attorney</fullName>
            </value>
            <value>
                <fullName>Insurance Professional</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>