force-app/main/default/objects/Contact/fields/Is_Provider_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Provider_Active__c</fullName>
    <formula>IF( forcebrain__User__r.IsActive =true,&quot;Active&quot;,&quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Provider Active</label>
    <type>Text</type>
</CustomField>