force-app/main/default/objects/Contact/fields/kugadd__DisableAccountToContactSync__c.field-meta.xml
<CustomField>
    <fullName>kugadd__DisableAccountToContactSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Account to Contact Sync</label>
    <type>Checkbox</type>
</CustomField>