force-app/main/default/objects/Contact/fields/Last_Campaign_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Activity__c</fullName>
    <label>Last Campaign Activity</label>
    <type>Date</type>
</CustomField>