force-app/main/default/objects/Contact/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Contact&apos;s LinkedIn URL as given to us during the social media collection process</description>
    <inlineHelpText>LinkedIn URL populated from Social Media Email Campaign survey gizmo form.</inlineHelpText>
    <label>LinkedIn URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>