force-app/main/default/objects/Contact/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <defaultValue>&quot;en-us&quot;</defaultValue>
    <description>This field is used to for SMS/MMS settings</description>
    <inlineHelpText>This field is used to for SMS/MMS settings</inlineHelpText>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>