force-app/main/default/objects/Contact/fields/Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Code__c</fullName>
    <label>Login Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>