force-app/main/default/objects/Contact/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Professionals</relationshipLabel>
    <relationshipName>Professionals</relationshipName>
    <type>Lookup</type>
</CustomField>