force-app/main/default/objects/Contact/fields/Market_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Upload_Date__c</fullName>
    <formula>Market_Project__r.New_Final_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Upload Date</label>
    <type>Date</type>
</CustomField>