force-app/main/default/objects/Contact/fields/Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Link__c</fullName>
    <formula>Market_Project__r.Product_Overview_Ad_Guidelines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Link</label>
    <type>Text</type>
</CustomField>