force-app/main/default/objects/Contact/fields/Mobile_SMS_Format__c.field-meta.xml
<CustomField>
    <fullName>Mobile_SMS_Format__c</fullName>
    <formula>&quot;1&quot; &amp; RIGHT( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone,&quot;-&quot;,&quot;&quot;) , &quot; &quot;, &quot;&quot;) , &quot;)&quot;,&quot;&quot;) ,&quot;(&quot;,&quot;&quot;),10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile SMS Format</label>
    <type>Text</type>
</CustomField>