force-app/main/default/objects/Contact/fields/MX_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>MX_Customer_Id__c</fullName>
    <label>MX Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>