force-app/main/default/objects/Contact/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <label>Name Suffix</label>
    <length>60</length>
    <type>Text</type>
</CustomField>