force-app/main/default/objects/Contact/fields/No_Interest_Identified__c.field-meta.xml
<CustomField>
    <fullName>No_Interest_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Interest Identified</label>
    <type>Checkbox</type>
</CustomField>