force-app/main/default/objects/Contact/fields/Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Approved</label>
    <type>Checkbox</type>
</CustomField>