force-app/main/default/objects/Contact/fields/Old_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Client_Type__c</fullName>
    <label>Old Client Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>