force-app/main/default/objects/Contact/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Check In</fullName>
            </value>
            <value>
                <fullName>Digital Ads</fullName>
            </value>
            <value>
                <fullName>Essential Experiences</fullName>
            </value>
            <value>
                <fullName>Essential Living Magazine</fullName>
            </value>
            <value>
                <fullName>E-Newsletter</fullName>
            </value>
            <value>
                <fullName>Postcards</fullName>
            </value>
            <value>
                <fullName>Social Media Management</fullName>
            </value>
            <value>
                <fullName>Escapes and Experiences Magazine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>