force-app/main/default/objects/Contact/fields/Other_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Interest__c</fullName>
    <description>Product Interest Field</description>
    <label>Other Product Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>