force-app/main/default/objects/Contact/fields/Packages_Link__c.field-meta.xml
<CustomField>
    <fullName>Packages_Link__c</fullName>
    <formula>Market_Project__r.Packages_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packages Link</label>
    <type>Text</type>
</CustomField>