force-app/main/default/objects/Contact/fields/Pardot_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Balance_Due__c</fullName>
    <description>Balance due from most recent order, dataloaded manually, used for finance email blasts</description>
    <label>Pardot Balance Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>