force-app/main/default/objects/Contact/fields/Pardot_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Invoice_Link__c</fullName>
    <description>Invoice link from most recent order, dataloaded manually, used for finance email blasts</description>
    <label>Pardot Invoice Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>