force-app/main/default/objects/Contact/fields/Pardot_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Order_ID__c</fullName>
    <description>Manually uploaded, used for Finance AR email blast</description>
    <label>Pardot Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>