force-app/main/default/objects/Contact/fields/Pardot_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Order_Number__c</fullName>
    <description>Manually dataloaded order number, used for finance email blasts</description>
    <label>Pardot Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>