force-app/main/default/objects/Contact/fields/Pardot_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Released_Date__c</fullName>
    <description>Manually dataloaded release date of most recent order, used for finance email blasts</description>
    <label>Pardot Released Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>