force-app/main/default/objects/Contact/fields/Parent_Company_Aka_Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Aka_Broker_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>National Professionals</relationshipLabel>
    <relationshipName>NationalProfessionals</relationshipName>
    <type>Lookup</type>
</CustomField>