force-app/main/default/objects/Contact/fields/PaymentMethodLink__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodLink__c</fullName>
    <formula>&quot;https://fivestarprofessional.secure.force.com/publicCardTerminalPage?id=&quot; + CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Link</label>
    <type>Text</type>
</CustomField>