force-app/main/default/objects/Contact/fields/Photography_Markets__c.field-meta.xml
<CustomField>
    <fullName>Photography_Markets__c</fullName>
    <label>Photography Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>