force-app/main/default/objects/Contact/fields/pi__Pardot_Last_Scored_At__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Last_Scored_At__c</fullName>
    <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
    <label>Pardot Last Scored At</label>
    <type>DateTime</type>
</CustomField>